--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-
-
 </head>
 
 <body>
     <header>
+        <!-- navbar -->
         <nav class="navbar navbar-expand-lg dalany-color-white fixed-top ">
             <div class=" container-fluid ">
-                <a class="navbar-brand" href="#"><img id="icono" class="w-25 m-0 p-0"
-                        src="./assets/imgs/DALANY-logo.ico" alt="">Dalany Foundation</a>
+                <a class="navbar-brand text-dalany" href="#"><img id="icono" class="w-25 m-0 p-0 "
+                        src="./assets/imgs/DALANY-logo.ico" alt="">Dalany Foundation
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                     aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -29,28 +29,28 @@
 
                 <div class=" collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll " style="--bs-scroll-height: 100px;">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <li class="nav-item  ">
+                            <a class="nav-link text-dalany " aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About us</a>
+                            <a class="nav-link text-dalany " href="#">About us</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
+                            <a class="nav-link  text-dalany dropdown-toggle" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
                                 Services
                             </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <ul class="dropdown-menu bg-dalany-white">
+                                <li><a class="dropdown-item text-dalany " href="#">Action</a></li>
+                                <li><a class="dropdown-item text-dalany " href="#">Another action</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item text-dalany " href="#">Something else here</a></li>
                             </ul>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#" aria-disabled="true">Contact us</a>
+                            <a class="nav-link text-dalany " href="#" aria-disabled="true">Contact us</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -60,18 +60,29 @@
                 </div>
             </div>
         </nav>
+        <!-- end navbar -->
     </header>
-    <section class="z-0">
-        <div id="carouselExample" class="carousel slide">
+    <!-- carrusel -->
+    <section class="z-0 ">
+        <div id="carouselExample" class="carousel slide " data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="./assets/imgs/img1.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item ">
                     <img src="./assets/imgs/img2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
                     <img src="./assets/imgs/img3.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/imgs/img4.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/imgs/img5.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/imgs/img6.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -84,48 +95,118 @@
             </button>
         </div>
     </section>
-
-    <!--  -->
-    <section class="mt-5">
+    <!-- end carrusel -->
+    <!--Main  -->
+    <main class="mt-5">
         <h2 class="text-center mb-5">Spotlight Stories</h2>
         <div class=" container card-group w-100 ">
             <div class="card m-3">
                 <img src="./assets/imgs/persons/person1.jpg" class="card-img img-fluid object-fit-cover" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, a magni!</h5>
+                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum veritatis,
+                        quasi explicabo animi rem numquam molestias aspernatur, voluptate vero, assumenda recusandae
+                        eius cupiditate voluptates ipsum?</p>
+
                 </div>
             </div>
             <div class="card m-3">
                 <img src="./assets/imgs/persons/person2.jpg" class="card-img-top img-fluid object-fit" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+                    <h5 class="card-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, quae
+                        et.</h5>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt iste
+                        incidunt, deserunt eligendi delectus tenetur quos recusandae error fuga ducimus culpa illo ipsam
+                        cupiditate cum.
                     </p>
-                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+
                 </div>
             </div>
             <div class="card m-3">
                 <img src="./assets/imgs/persons/person4.jpg" class="card-img-top img-fluid object-fit " alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This card has even longer content than the first to show that equal height
-                        action.</p>
-                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Incidunt,
+                        molestiae?</h5>
+                    <p class="card-text text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+                        voluptate,
+                        iure, exercitationem vitae pariatur esse obcaecati hic doloribus, quos quia delectus. Voluptatem
+                        sapiente eligendi fuga?
+                    </p>
+
                 </div>
             </div>
         </div>
-    </section>
-    <footer class="dalany-color2">
+
+        <!-- separador de seccion -->
+        <div class="separador-dalany1 w-100">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#241652f3" fill-opacity="1" d="M0,288L1440,32L1440,320L0,320Z"></path>
+            </svg>
+        </div>
+        <!-- end separador de seccion -->
+        <section class="w-100 ">
+            <h2 class="text-center mb-5">Our Team</h2>
+
+            <div class="container-fluid ">
+                <div class="row ">
+                    <div class="col-md-4 ">
+                        <div class="card text-white mb-3">
+                            <img class="img-team" src="./assets/imgs/team/team-person1.jpg" alt="">
+                            <div class="card-img-overlay img-fluid d-flex flex-column justify-content-between">
+                                <h5 class="card-title">John Doe</h5>
+                                <p class="card-text text-dalany text-shadow">Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing
+                                    elit. Sed non
+                                    felis
+                                    neque. Donec sed elit at felis molestie imperdiet.</p>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card text-white  mb-3">
+                            <img class="img-team" src="./assets/imgs/team/team-person4.jpg" alt="">
+                            <div class="card-img-overlay img-fluid d-flex flex-column justify-content-between">
+                                <h5 class="card-title">Jane Doe</h5>
+                                <p class="card-text text-white text-shadow">Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing
+                                    elit. Sed non
+                                    felis
+                                    neque. Donec sed elit at felis molestie imperdiet.</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card text-white  mb-3 ">
+                            <img class="img-team" src="./assets/imgs/team/team-person3.jpg" alt="" srcset="">
+                            <div class="card-img-overlay img-fluid d-flex flex-column justify-content-between">
+                                <h5 class="card-title">Michel Doe</h5>
+                                <p class="card-text text-dalany text-shadow">Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing
+                                    elit. Sed
+                                    non
+                                    felis
+                                    neque. Donec sed elit at felis molestie imperdiet.</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <!-- end card -->
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- end main -->
+
+
+    <footer class="dalany-color2 d-block">
 
         <div class="container-fluid text-white-50 ">
 
-
             <div class="row ">
-
                 <div class="col-md-4 text-white align-content-center">
                     <h5>About Us</h5>
                     <p>
@@ -161,6 +242,7 @@
             </div>
             <p class="text-center ">Dalany Foundation &copy; 2025</p>
     </footer>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="js/index.js"></script> <!-- archivo JS externo -->
 </body>
