--- a/index.html
+++ b/index.html
@@ -99,36 +99,39 @@
     <!--Main  -->
     <main class="mt-5">
         <h2 class="text-center mb-5">Spotlight Stories</h2>
-        <div class=" container card-group w-100 ">
-            <div class="card m-3">
+        <div class=" container card-group w-100">
+            <div class="card m-3 border-0">
                 <img src="./assets/imgs/persons/person1.jpg" class="card-img img-fluid object-fit-cover" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, a magni!</h5>
-                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum veritatis,
+                    <p class="card-text text-capitalize">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum
+                        veritatis,
                         quasi explicabo animi rem numquam molestias aspernatur, voluptate vero, assumenda recusandae
                         eius cupiditate voluptates ipsum?</p>
 
                 </div>
             </div>
-            <div class="card m-3">
+            <div class="card m-3 border-0">
                 <img src="./assets/imgs/persons/person2.jpg" class="card-img-top img-fluid object-fit" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, quae
                         et.</h5>
-                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt iste
+                    <p class="card-text text-capitalize">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Nesciunt iste
                         incidunt, deserunt eligendi delectus tenetur quos recusandae error fuga ducimus culpa illo ipsam
                         cupiditate cum.
                     </p>
 
                 </div>
             </div>
-            <div class="card m-3">
+            <div class="card m-3 border-0">
                 <img src="./assets/imgs/persons/person4.jpg" class="card-img-top img-fluid object-fit " alt="...">
                 <div class="card-body">
                     <h5 class="card-title text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                         Incidunt,
                         molestiae?</h5>
-                    <p class="card-text text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+                    <p class="card-text text-capitalize">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Incidunt
                         voluptate,
                         iure, exercitationem vitae pariatur esse obcaecati hic doloribus, quos quia delectus. Voluptatem
                         sapiente eligendi fuga?
@@ -137,16 +140,73 @@
                 </div>
             </div>
         </div>
+        <!-- section two -->
+        <section class="row row-cols-1 row-cols-md-1 ">
+            <section class="col dalany-color-3 ">
+                <div class="card bg-transparent d-flex  flex-row align-content-center border-0">
+                    <div>
+                        <img src="https://picsum.photos/700/700" class=" img-striking" alt="" />
+                    </div>
+                    <div class="d-flex flex-column align-content-center justify-content-center p-5 text-dalany2">
+                        <h2>Magna primis lobortis<br />
+                            sed ullamcorper
+                        </h2>
+                        <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend
+                            fringilla
+                            nullam aenean mi ligula.
+                        </p>
+                    </div>
+                </div>
+            </section>
+
+
+
+            <section class="col dalany-color ">
+                <div class="card bg-transparent d-flex flex-row-reverse border-0">
+                    <div>
+                        <img src="https://picsum.photos/600/600" class=" img-striking" alt="" />
+                    </div>
+                    <div class="d-flex flex-column align-content-center justify-content-center p-5 text-dalany2">
+                        <h2>Magna primis lobortis<br />
+                            sed ullamcorper
+                        </h2>
+                        <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend
+                            fringilla
+                            nullam aenean mi ligula.
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <section class="col dalany-color-3 ">
+                <div class="card bg-transparent d-flex flex-row border-0">
+                    <div>
+                        <img src="https://picsum.photos/600/700" class=" img-striking" alt="" />
+                    </div>
+                    <div class="d-flex flex-column align-content-center justify-content-center p-5 text-dalany2">
+                        <h2>Magna primis lobortis<br />
+                            sed ullamcorper
+                        </h2>
+                        <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend
+                            fringilla
+                            nullam aenean mi ligula.
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </section>
+        <!-- en two section -->
 
         <!-- separador de seccion -->
         <div class="separador-dalany1 w-100">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                <path fill="#241652f3" fill-opacity="1" d="M0,288L1440,32L1440,320L0,320Z"></path>
+                <path fill="#241652e5" fill-opacity="1" d="M0,288L1440,32L1440,320L0,320Z"></path>
             </svg>
         </div>
         <!-- end separador de seccion -->
+
+
         <section class="w-100 ">
-            <h2 class="text-center mb-5">Our Team</h2>
+            <h2 class="text-center ">Our Team</h2>
 
             <div class="container-fluid ">
                 <div class="row ">
@@ -180,7 +240,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card text-white  mb-3 ">
+                        <div class="card text-white  ">
                             <img class="img-team" src="./assets/imgs/team/team-person3.jpg" alt="" srcset="">
                             <div class="card-img-overlay img-fluid d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Michel Doe</h5>
@@ -198,6 +258,8 @@
                 </div>
             </div>
         </section>
+
+
     </main>
     <!-- end main -->
 
